--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,166 @@
 .App {
  font-family: 'Roboto';
 }
+h4 {
+  font-size: 16px;
+  font-weight: 600;
+}
+h5 {
+  font-size: 14px;
+  font-weight: 500;
+}
+p {
+  font-size: 14px;
+  font-weight: 400;
+}
+th {
+  font-size: 14px;
+  font-weight: 500;
+  color: #727789;
+}
+td {
+  font-size: 13px;
+  font-weight: 400;
+  color: #727789;
+}
+.status-link {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #727789;
+  height: 36px;
+  width: 78px;
+  font-weight: 500;
+  font-size: 14px;
+
+  line-height: 18px;
+
+  border-right: 1px solid #d0d5dd;
+}
+.status-btn {
+  border: 1px solid #d0d5dd;
+  border-radius: 8px;
+  width: 234px;
+  height: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.search-div {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.search-position {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.search-div input {
+  width: 259px !important;
+  height: 38px !important;
+  padding: 0px 10px;
+  border-radius: 8px !important;
+  border: 1px solid #dbe0ee !important;
+}
+
+.search-div p {
+  color: #9499ac;
+  font-weight: 600;
+  font-size: 14px;
+}
+.sub-bill-1 {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.custom-table tbody tr td input[type="checkbox"] {
+  margin: 0;
+}
+.table-container {
+  margin: 15px 15px;
+  min-width: 760px;
+  overflow-x: auto;
+  border-top-right-radius: 12px;
+  border-top-left-radius: 12px;
+}
+
+.custom-table {
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
+  border: 1px solid #d0d5dd;
+}
+
+.custom-table thead th {
+  padding: 10px;
+  background-color: #f4f4f4;
+  font-weight: bold;
+  font-size: 14px;
+  border: 1px solid #d0d5dd;
+}
+
+.custom-table tbody tr {
+  padding: 10px;
+  border: 1px solid #d0d5dd;
+}
+.custom-table tbody td {
+  padding: 10px;
+  border: none;
+}
+.summary-div-1 {
+  display: flex;
+  justify-content: space-between;
+}
+.summary-ps {
+  display: flex;
+  flex-direction: column;
+  width: 230px;
+  height: 100px;
+  border: 1px solid #d0d5dd;
+  border-radius: 10px;
+  padding: 15px;
+  font-size: 16px;
+  font-weight: 600;
+  gap: 15px;
+  color: #727789;
+}
+.summary-ps span {
+  color: #030b26;
+  font-weight: 800;
+  font-size: 20px;
+
+}
+.inner-summary-div {
+  display: flex;
+  gap: 15px;
+}
+.summary {
+  border: 1px solid #d0d5dd;
+  border-radius: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 15px;
+  margin: 15px;
+}
+.summary-div-1 p, .annual-target{
+  font-size: 16px;
+  font-weight: 600;
+
+  color: #727789;
+}
+.summary-div-1 span, .annual-target span{
+  color: #030b26;
+  font-weight: 800;
+  font-size: 25px;
+}
+.annual-target {
+  margin: 15px 0px;
+}
+.branch-target {
+  margin-top: 15px;
+}
 
