--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,78 @@ td {
   font-weight: 400;
   color: #727789;
 }
+.admin-nav-2 {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.admin-nav-2 p {
+  font-size: 400;
+  /* font-family: 'Onset Roboto'; */
+  color: #ffffff;
+}
+.admin-nav-2 input {
+  width: 335px;
+  height: 38px;
+  padding-left: 10px;
+  border-style: none;
+  background: #FFFFFF;
+border-radius: 6px;
+display: flex;
+  align-items: center;
+ 
+}
+
+
+
+.admin-nav-3 {
+  position: relative;
+  display: flex;
+ 
+}
+.admin-nav, .admin-desk {
+  background: #0C1D55;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 35px;
+  position: fixed;
+ right: 0;
+ left: 0;
+ z-index: 9999 !important;
+}
+.icon-admin-menu {
+  display: none ;
+}
+.admin-icon {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.admin-nav-img {
+  width: 30px;
+  height: 30px;
+}
+.admin-nav-3 p {
+  font-size: 14px;
+color: #ffffff;
+}
+.admin-nav-3 {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.admin-nav-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.admin-nav-link {
+  color: #12d27d;
+  font-weight: 500;
+}
+
 .status-link {
   text-decoration: none;
   display: flex;
@@ -288,3 +360,24 @@ table {
   margin-top: 15px;
 }
 
+@media (max-width: 1024px) {
+  .icon-admin-menu {
+    display: block !important;
+  }
+  .open {
+    left: -300px !important;
+    position: fixed;
+   
+
+  
+}
+.close {
+ left: 0px !important;
+
+}
+}
+@media (max-width: 350px) {
+.search-div input {
+  width: 200px !important;
+}
+}
