--- a/src/App.css
+++ b/src/App.css
@@ -257,6 +257,36 @@ table {
   top: 0;
   left: 0;
 }
+.successPop {
+  width: fit-content;
+  padding: 30px;
+  border-radius: 15px;
+  background: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+.successPop p {
+  color: #112240 !important;
+  font-size: 18px !important;
+  font-weight: 700 !important;
+  line-height: 24px;
+  max-width: 200px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.successPop button {
+  border: 1px solid #112240;
+  color: #112240;
+  background: transparent;
+  width: 100px;
+  height: 45px;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 10px;
+}
 .all-dropdown-div {
   width: 556px;
 
