--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,18 @@ display: flex;
   align-items: center;
  
 }
-
+.move-to-coll {
+  padding:  10px !important;
+  width: fit-content !important;
+  background: #0C1D55 !important;
+  color: white !important;
+  border-radius: 10px !important;
+  font-size: 16px !important;
+  font-weight: 500 !important;
+  cursor: pointer !important;
+  height: fit-content !important;
+  margin: auto !important;
+}
 .log-out-admins {
   width: 100px;
   height: 40px;
